# neat

./: Cargo.toml  README.md  todo.md
.github/workflows/: ci.yml
src/: config.rs  genome.rs  innovation.rs  main.rs  misc.rs  species.rs  trainer.rs
